--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,118 +1,178 @@
 .task1 .item {
+  position: relative;
+  left: 200px;
+  top: 150px;
 }
 
 .task2 .item {
+  position: absolute;
+  right: calc(50% - 40px);
+  bottom: calc(50% - 40px);
 }
 
 .task3 .item {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .container4 {
+  position: relative;
 }
 
 .task4 {
   width: 1000px;
 }
 .task4 .item {
+  position: sticky;
+  left: calc(50% - 40px);
+}
+
+.task5 {
+  position: relative;
 }
 
 .task5 .item1 {
   background-color: red;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 2;
 }
 .task5 .item2 {
+  background-color: blue;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  z-index: 1;
 }
 .task5 .item3 {
   background-color: green;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
 }
 
 .task6 .item {
+  float: left;
 }
 
 .task7 .item {
+  float: right;
 }
 
 .task8 .item1 {
+  float: left;
+   /* width: 80px;
+   height: 80px; */
 }
-.task8 .item2 {
+
+.task8 .item2 { 
   height: 120px;
+  float: right; 
 }
 
 .task8 p {
+  clear: both;
 }
 
 .task9 .item1 {
   height: 200px;
+  float: left;
 }
+
 .task9 .item2 {
+   float: right; 
 }
+
 .task9 p {
+  clear: right;
 }
 
 .task10 .item1 {
+  float: left;
 }
 .task10 .item2 {
+  height: 200px;
+  float: right;
 }
 .task10 p {
+  clear: left; 
 }
 
 .task11 .img-item {
   height: 100%;
   width: 100%;
+
+  object-fit: contain;
 }
 
 .task12 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .task13 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: fill;
 }
 
 .task14 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: scale-down;
 }
 
 .task15 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: center right;
 }
 
 .task16 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: left top;
 }
 
 .task17 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: center bottom;
 }
 
 .task18 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: 40px 25px;
 }
 
 .task19 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: 50% 50%;
 }
 
 .task20 {
+  user-select: none;
 }
 
 .task21 {
+  user-select: all;
 }
 
 .task22 {
+  caret-color: blue;
 }
 
 html {
+  scroll-behavior: smooth;
 }
